tests/errors/invalid_cast.ne
function main(): int32
{
    intVar: int8 = 123;
    stringVar: string = to<string>(intVar);
    return 0;
}